--- a/react-truck/package.json
+++ b/react-truck/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "i18next": "^21.7.1",
@@ -18,9 +19,10 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env.production react-scripts start",
+    "build:production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
