--- a/react-truck/package.json
+++ b/react-truck/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "ag-charts-community": "^6.1.3",
+    "ag-charts-react": "^6.1.1",
     "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
@@ -17,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.13",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
